# flask-session-tutorial

./: .env.example  .flake8  .gitignore  Makefile  Pipfile  README.md  config.py  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  setup.py  wsgi.py
.github/: dependabot.yml
application/: __init__.py  assets.py  auth.py  forms.py  models.py  routes.py
application/static/src/less/: account.less
application/templates/: analytics.jinja2  dashboard.html  layout.html  layout.jinja2  login.html  meta.html  session.html  session.jinja2  signup.html  signup.jinja2
flask_session_tutorial/: .env.example  __init__.py  assets.py  auth.py  forms.py  main.py  models.py  routes.py
flask_session_tutorial/static/src/js/: main.js
flask_session_tutorial/static/src/less/: account.less  dashboard.less  vars.less
flask_session_tutorial/templates/: dashboard.jinja2  layout.jinja2  login.jinja2  session.jinja2  signup.jinja2
