[tool.poetry]
name = "flask_session_tutorial"
version = "0.1.0"
description = "Example Flask project for implementing Flask-Session with Redis."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hackersandslackers.com/managing-user-session-variables-with-flask-sessions-and-redis/"
repository = "https://github.com/hackersandslackers/flask-session-tutorial/"
documentation = "https://hackersandslackers.com/managing-user-session-variables-with-flask-sessions-and-redis/"
keywords = [
    "Flask",
    "Flask-Session",
    "Redis",
    "User sessions",
    "Tutorial"
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
flask-sqlalchemy = "*"
flask-login = "*"
flask-assets = "*"
flask-session = "*"
flask-wtf = "*"
pymysql = "*"
redis = "*"
email_validator = "*"
python-dotenv = "*"
black = "^20.8b1"
ddtrace = "^0.50.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
lesscpy = "*"
cssmin = "*"
jsmin = "*"
pytest = "*"

[tool.poetry.scripts]
run = "wsgi:app"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/flask-session-tutorial/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
