[tool.poetry]
name = "flask-session-tutorial"
version = "0.1.0"
description = "Example Flask project for implementing Flask-Session with Redis."
authors = ["Todd Birchard <todd@hackersandslackers.com>"]
maintainers = ["Todd Birchard <todd@hackersandslackers.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hackersandslackers.com/managing-user-session-variables-with-flask-sessions-and-redis/"
repository = "https://github.com/hackersandslackers/flask-session-tutorial/"
documentation = "https://hackersandslackers.com/managing-user-session-variables-with-flask-sessions-and-redis/"
keywords = [
    "Flask",
    "Flask-Session",
    "Redis",
    "User sessions",
    "Tutorial"
]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
flask-sqlalchemy = "*"
flask-login = "*"
flask-assets = "*"
flask-session = "*"
flask-wtf = "*"
pymysql = "*"
redis = "*"
email_validator = "*"
python-dotenv = "*"
black = "*"
isort = "*"
lesscpy = "*"
cssmin = "*"
jsmin = "*"
gunicorn = "^20.1.0"

[tool.poetry.scripts]
run = "wsgi:app"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/flask-session-tutorial/issues"

[build-system]
requires = ["poetry>=1.3.1"]
build-backend = "poetry.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable="C0103,C0301,W0703,W0621"

[tool.black]
line-length = 120